samples/_failures_safe/1761073550_af8cd6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6a626654.c:133: error: expected ‘;’, ‘,’ or ‘)’ at end of input
